services/frontend-service/src/ui/components/dropdown/dropdown.scss
/*This file is part of kuberpult.

Kuberpult is free software: you can redistribute it and/or modify
it under the terms of the Expat(MIT) License as published by
the Free Software Foundation.

Kuberpult is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
MIT License for more details.

You should have received a copy of the MIT License
along with kuberpult. If not, see <https://directory.fsf.org/wiki/License:Expat>.

Copyright 2023 freiheit.com*/
@use '@material/floating-label/mdc-floating-label';
@use '@material/notched-outline/mdc-notched-outline';
@use '@material/select/mdc-select';
@use '@material/select/icon';

label.mdc-select-label.new-line-height {
    line-height: 17px;
}

label.mdc-select-label {
    @extend .text-bold;
}

div.mdc-select {
    @extend .text-bold;
    width: 100%;
    min-height: 100%;
    border-radius: $border-radius-medium;
    fieldset {
        border-color: var(--mdc-theme-primary);
    }
}

.remove-space {
    fieldset {
        legend {
            max-width: 0.01px;
        }
    }
}

.dropdown {
    min-width: 220px;
    left: 0;
    top: -5px;
    position: absolute;
    transform: none;
    padding-top: 10px;
}

.dropdown-arrow-container {
    position: relative;
    .dropdown-arrow {
        position: absolute;
        right: 10px;
        top: 10px;
        font-size: xx-large;
        pointer-events: none;
    }
}

.dropdown-input {
    height: 50px;
    border-radius: $border-radius-small;
    border: 1px solid blue;
    padding-left: 1em;
}

